--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/bsgg11.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/bsggico.ico" />
     <meta name="viewport" content="width=device-width">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
