--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="description" CONTENT="설명~~~~~~~">
+
     <link rel="icon" href="%PUBLIC_URL%/bsggico.ico" />
     <meta name="viewport" content="width=device-width">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
