--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="description" CONTENT="설명~~~~~~~">
+    <meta name="description" CONTENT="영원회귀:블랙서바이벌 스탯, 캐릭터 티어, 아이템 트렌드, BS:ER Stats, Character Tier, Item Trend">
 
     <link rel="icon" href="%PUBLIC_URL%/bsggico.ico" />
     <meta name="viewport" content="width=device-width">
