--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <title>BSGG.kr</title>
   </head>
   <body>
