--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script data-ad-client="ca-pub-2624497775833940" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </body>
 </html>
