구글 애널리틱스 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BK9NCZ5RJB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BK9NCZ5RJB');
+    </script>
     <meta charset="utf-8" />
     <meta name="description" CONTENT="영원회귀:블랙서바이벌 스탯, 캐릭터 티어, 아이템 트렌드, BS:ER Stats, Character Tier, Item Trend">
 
