아이폰 아이콘 변경

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <link rel="icon" href="https://bsgg.kr/bsggico.ico" />
     <meta name="viewport" content="width=device-width">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/bsggico.ico" />
+    <link rel="apple-touch-icon" href="https://bsgg.kr/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
