메일 기능 추가 타이틀에 캐릭터 이름 추가

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="description" CONTENT="영원회귀 : 블랙 서바이벌 통계, 캐릭터 티어, 아이템 트렌드, BS:ER Stats, Character Tier, Item Trend">
     <meta name="keywords" CONTENT="영원회귀, 블랙 서바이벌, 티어, BS:ER, Stats, Tier">
     <meta property="og:type" content="website"> 
-    <meta property="og:title" content="BSGG.kr - 블랙 서바이벌 통계 / BS:ER Stats"">
+    <meta property="og:title" content="BSGG.kr - 블랙 서바이벌 통계 / BS:ER Stats">
     <meta property="og:description" content="영원회귀 : 블랙 서바이벌 통계, 캐릭터 티어, 아이템 트렌드, BS:ER Stats, Character Tier, Item Trend">
     <meta property="og:image" content="https://bsgg.kr/logo512.png">
     <meta property="og:url" content="https://bsgg.kr">
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="https://bsgg.kr/logo512.png">
     <meta name="twitter:domain" content="https://bsgg.kr">
 
-    <link rel="icon" href="https://bsgg.kr/bsggico.ico" />
+    <link rel="icon" href="https://bsgg.kr/bsggico.ico" />    
     <meta name="viewport" content="width=device-width">
     <link rel="apple-touch-icon" href="https://bsgg.kr/logo192.png" />
     
