랭크 완료, 구글광고 테스트

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
+    <script crossorigin="anonymous" async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script data-ad-client="ca-pub-7215780243476450" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </body>
 </html>
