애널리틱스

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BK9NCZ5RJB"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185031113-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-BK9NCZ5RJB');
+      gtag('config', 'UA-185031113-1');
     </script>
     <title>BSGG.kr - 블랙 서바이벌 통계 / BS:ER Stats / 永遠回歸 : 黑色幸存者 统计 / ブラックサバイバル: 永遠回帰 情報</title>
     <meta charset="utf-8" />
