태그 관리자 추가

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
 
       gtag('config', 'UA-185031113-1');
     </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-PMZD8WM');</script>
+    <!-- End Google Tag Manager -->
     <title>BSGG.kr - 블랙 서바이벌 통계 / BS:ER Stats / 永遠回歸 : 黑色幸存者 统计 / ブラックサバイバル: 永遠回帰 情報</title>
     <meta charset="utf-8" />
     <meta name="description" CONTENT="영원회귀 : 블랙 서바이벌 통계, 캐릭터 티어, 아이템 트렌드, BS:ER Stats, Character Tier, Item Trend">
@@ -37,5 +44,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMZD8WM"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
