게임데이터에서 물, 감자, 대구, 붕어, 생명의나무 루트 추가 채찍 시작아이템 추가 짜잘한 에러 수정

--- a/public/404.html
+++ b/public/404.html
@@ -50,7 +50,7 @@
   color: rgb(209, 209, 209);
   text-align: center;">
   <div style="width: 800px; margin:auto; text-align: center;">
-    <img src="main_logo.svg" style="margin-top: 100px; width: 400px; text-align: center;"/>
+    <a href='/'><img src="main_logo.svg" style="margin-top: 100px; width: 400px; text-align: center;"/></a>
     <div style="margin-top: 30px; width: 800px; text-align: center; font-size: 25pt; color: rgb(209, 209, 209);">
         해당 페이지는 없는 페이지 입니다.
     </div>
