--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-PMZD8WM');</script>
     <!-- End Google Tag Manager -->
-    <title>BSGG.kr - 영원회귀 : 블랙 서바이벌 전적검색</title>
+    <title>BSGG.kr - 영원회귀 : 블랙 서바이벌 전적검색 / ブラックサバイバル: 永遠回帰 戦績情報 / BS:ER Stats</title>
     <meta charset="utf-8" />
     <meta name="description" CONTENT="블서 전적검색, 영원회귀 : 블랙 서바이벌 전적검색, 캐릭터 티어, ブラックサバイバル: 永遠回帰 戦績情報 , BS:ER Stats, 永遠回歸 : 黑色幸存者 戦績情報">
     <meta name="keywords" CONTENT="영원회귀, 블랙 서바이벌, 티어, BS:ER, Stats, Tier">
