--- a/public/404.html
+++ b/public/404.html
@@ -52,16 +52,16 @@
   <div style="width: 800px; margin:auto; text-align: center;">
     <a href='/'><img src="main_logo.svg" style="margin-top: 100px; width: 400px; text-align: center;"/></a>
     <div style="margin-top: 30px; width: 800px; text-align: center; font-size: 25pt; color: rgb(209, 209, 209);">
-        해당 페이지는 없는 페이지 입니다.
+        해당 페이지는 없는 페이지 입니다. 캐릭터 통계가 부족할 수 있습니다.
     </div>
     <div style="margin-top: 30px; width: 800px; text-align: center; font-size: 25pt; color: rgb(209, 209, 209);">
-      This page does not exist.
+      This page does not exist. Character statistics may be insufficient.
     </div>
     <div style="margin-top: 30px; width: 800px; text-align: center; font-size: 25pt; color: rgb(209, 209, 209);">
-      該当ページはないページです。
+      該当ページはないページです。キャラクターの統計が不足する可能性があります。
     </div>
     <div style="margin-top: 30px; width: 800px; text-align: center; font-size: 25pt; color: rgb(209, 209, 209);">
-      该页是没有的页面。
+      该页是没有的页面。角色统计可能不够。
     </div>
   </div>
   </body>
